@startuml iFilm Database ER Diagram

!define primary_key(x) <b><color:red>x</color></b>
!define foreign_key(x) <color:blue>x</color>
!define unique(x) <color:green>x</color>

entity "users" as users {
    primary_key(id): UUID
    --
    unique(email): VARCHAR(255)
    unique(username): VARCHAR(100)
    password_hash: VARCHAR(255)
    role: ENUM('user', 'admin')
    avatar: VARCHAR(500)
    is_active: BOOLEAN
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "user_sessions" as sessions {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID
    access_token: TEXT
    refresh_token: TEXT
    expires_at: TIMESTAMP
    ip_address: VARCHAR(45)
    user_agent: TEXT
    created_at: TIMESTAMP
}

entity "watch_history" as history {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID
    media_id: VARCHAR(100)
    media_type: ENUM('movie', 'episode')
    media_title: VARCHAR(500)
    progress: INTEGER
    duration: INTEGER
    percentage: DECIMAL(5,2)
    last_watched: TIMESTAMP
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "favorites" as favorites {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID
    media_id: VARCHAR(100)
    media_type: ENUM('movie', 'series')
    media_title: VARCHAR(500)
    media_poster_url: VARCHAR(500)
    added_at: TIMESTAMP
}

entity "jellyfin_config" as jellyfin {
    primary_key(id): UUID
    --
    server_url: VARCHAR(500)
    api_key_encrypted: TEXT
    jellyfin_user_id: VARCHAR(100)
    server_name: VARCHAR(255)
    server_version: VARCHAR(50)
    is_active: BOOLEAN
    last_sync: TIMESTAMP
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "jellyfin_libraries" as libraries {
    primary_key(id): UUID
    --
    foreign_key(config_id): UUID
    library_id: VARCHAR(100)
    library_name: VARCHAR(255)
    collection_type: ENUM('movies', 'tvshows', 'music')
    is_visible: BOOLEAN
    item_count: INTEGER
    last_sync: TIMESTAMP
    created_at: TIMESTAMP
}

entity "media_cache" as cache {
    primary_key(id): UUID
    --
    media_id: VARCHAR(100)
    media_type: ENUM('movie', 'series', 'episode')
    title: VARCHAR(500)
    overview: TEXT
    poster_url: VARCHAR(500)
    backdrop_url: VARCHAR(500)
    year: INTEGER
    rating: DECIMAL(3,1)
    duration: INTEGER
    genres: JSON
    metadata: JSON
    cached_at: TIMESTAMP
    expires_at: TIMESTAMP
}

entity "user_profiles" as profiles {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID
    display_name: VARCHAR(100)
    bio: TEXT
    avatar_url: VARCHAR(500)
    language: VARCHAR(10)
    subtitle_language: VARCHAR(10)
    autoplay_next: BOOLEAN
    quality_preference: ENUM('auto', '1080p', '720p', '480p')
    created_at: TIMESTAMP
    updated_at: TIMESTAMP
}

entity "search_history" as search {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID
    query: VARCHAR(500)
    results_count: INTEGER
    searched_at: TIMESTAMP
}

entity "stream_logs" as logs {
    primary_key(id): UUID
    --
    foreign_key(user_id): UUID
    media_id: VARCHAR(100)
    media_type: ENUM('movie', 'episode')
    stream_token: TEXT
    ip_address: VARCHAR(45)
    user_agent: TEXT
    quality: VARCHAR(20)
    bandwidth: BIGINT
    started_at: TIMESTAMP
    ended_at: TIMESTAMP
    duration_watched: INTEGER
}

entity "admin_actions" as admin_actions {
    primary_key(id): UUID
    --
    foreign_key(admin_id): UUID
    action_type: ENUM('user_update', 'user_delete', 'config_update', 'library_sync')
    target_id: UUID
    details: JSON
    created_at: TIMESTAMP
}

' Relationships
users ||--o{ sessions : "user_id"
users ||--o{ history : "user_id"
users ||--o{ favorites : "user_id"
users ||--o{ profiles : "user_id"
users ||--o{ search : "user_id"
users ||--o{ logs : "user_id"
users ||--o{ admin_actions : "admin_id"

jellyfin ||--o{ libraries : "config_id"

' Indexes
note right of users
    Indexes:
    - idx_email (email)
    - idx_username (username)
    - idx_role (role)
    - idx_created_at (created_at)
end note

note right of history
    Indexes:
    - idx_user_media (user_id, media_id)
    - idx_last_watched (last_watched DESC)
    - idx_media_type (media_type)
    
    Constraints:
    - UNIQUE(user_id, media_id, media_type)
end note

note right of favorites
    Indexes:
    - idx_user_media (user_id, media_id)
    - idx_added_at (added_at DESC)
    
    Constraints:
    - UNIQUE(user_id, media_id, media_type)
end note

note right of sessions
    Indexes:
    - idx_user_id (user_id)
    - idx_expires_at (expires_at)
    - idx_access_token (access_token)
end note

note right of cache
    Indexes:
    - idx_media_id (media_id)
    - idx_media_type (media_type)
    - idx_expires_at (expires_at)
    
    Constraints:
    - UNIQUE(media_id, media_type)
end note

note right of logs
    Indexes:
    - idx_user_id (user_id)
    - idx_media_id (media_id)
    - idx_started_at (started_at DESC)
end note

@enduml